# kalk

./: README.rst  calc.py  pyproject.toml  r3l3453.json  setup.cfg  setup.py  test.py  test_calc.py
_kalk/: __init__.py  binary_ops.py  unary_ops.py
tests/: test_kalk.py
