[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'kalk'
authors = [{name = '5j9', email = '5j9@users.noreply.github.com'}]
license = {text = 'GNU General Public License v3 (GPLv3)'}
description = 'a simple cli RPN calculator written in Python'
keywords = ['calculator', 'kalkulator', 'cli', 'RPN']
classifiers = [
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Programming Language :: Python :: 3.9',
    'Topic :: Scientific/Engineering',
]
urls = {Homepage = 'https://github.com/5j9/kalk'}
requires-python = '>=3.9'
dependencies = [
    'regex',
    'pyperclip',
    "jdatetime>=5.2.0",
    "pyreadline3>=3.5.4 ; sys_platform == 'win32'",
]
dynamic = ['version']

[project.readme]
file = 'README.rst'
content-type = 'text/x-rst'

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
kalk = '_kalk:main'

[tool.flit.module]
name = '_kalk'  # the import name

[tool.ruff]
line-length = 79
format.quote-style = 'single'
lint.isort.combine-as-imports = true
lint.extend-select = [
    'W605', # invalid-escape-sequence
    'FA',  # flake8-future-annotations
    'I',  # isort
    'UP',  # pyupgrade
    'RUF', # Ruff-specific rules (RUF)
]
lint.ignore = [
    'E721',  # Do not compare types, use `isinstance()`
    'RUF001',  # ambiguous-unicode-character-string	
    'RUF002',  # ambiguous-unicode-character-docstring
    'RUF003',  # ambiguous-unicode-character-comment
    'RUF012',  # mutable-class-default
]

[tool.pytest.ini_options]
addopts = '--quiet --tb=short'

[tool.pyright]
typeCheckingMode = 'standard'
reportInvalidStringEscapeSequence = false
reportConstantRedefinition = 'error'
reportDeprecated = 'warning'
reportPropertyTypeMismatch = 'error'
reportTypeCommentUsage = 'warning'
reportUnnecessaryCast = 'warning'
reportUnnecessaryComparison = 'warning'
reportUnnecessaryContains = 'warning'
reportUnnecessaryIsInstance = 'warning'
reportUnnecessaryTypeIgnoreComment = 'warning'
