[metadata]
name = kalk
version = attr: _kalk.__version__
author = 5j9
author_email = 5j9@users.noreply.github.com
license = GNU General Public License v3 (GPLv3)
description = a simple cli RPN calculator written in Python
keywords = calculator, kalkulator, cli, RPN
url = https://github.com/5j9/kalk
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = _kalk
zip_safe = True
install_requires = regex; pyperclip
python_requires = >=3.9
tests_require = pytest

[options.entry_points]
console_scripts = kalk = _kalk:main
